test/tests/compiler/12_unsigned_integers/invalid_lex/invalid_suffix.plx
pub fn main(none) i32 {
    # An unsigned constant suffix should only have one 'u'
    return 0uu
}
